fix: change modal-overlay z-index to -1

--- a/css/style.css
+++ b/css/style.css
@@ -2188,17 +2188,19 @@ input[type="range"]:active::-moz-range-thumb {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 100000;
+    z-index: -1;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1), z-index 0s 0.4s;
 }
 
 .modal-overlay.show {
+    z-index: 100000;
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
+    transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1), z-index 0s 0s;
 }
 
 .modal-content.settings-content {
